kubernetes/services/tautulli/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/name: tautulli
